Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-19303

Accessibility : It shall not be able to disable Accessibility without associated delay

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Trivial
    • 0.4.15
    • RosDlls
    • None

    Description

      reactos-bootcd-0.4.15-dev-6826-gdabb3f4-x86-gcc-lin-dbg

      • Open Accessibility control panel
      • General tab
      • Check "disable..."
      • This is possible and can be "saved" even if no delay is selected (empty combo box)
      • This only happens as long as a valid timeout hasn't been saved, eg, until first call to SPI_SETACCESSTIMEOUT

      Win2K3 : empty is not allowed :

      Fixed by : access.patch

      Attachments

        1. image-2023-11-04-17-45-24-244.png
          16 kB
          KRosUser
        2. putty.log
          6 kB
          KRosUser
        3. image-2023-11-04-17-47-45-795.png
          25 kB
          KRosUser
        4. access.patch
          1 kB
          KRosUser

        Activity

          People

            katayama_hirofumi_mz Katayama Hirofumi MZ
            KRosUser KRosUser
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: