[ACCESS] GeneralPageProc().WM_INITDIALOG: Do not change iTimeOutMSec

Partly revert 416d630 (0.4.15-dev-6974).
CORE-19303